# ODEpower

./: .gitignore  .readthedocs.yaml  README.md
ODEpower/: README.md  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py
ODEpower/ODEpower/: ODEgraph.py  ODEmatlab.py  ODEplot.py  ODEpower.py  ODEsimulation.py  ODEtool.py  __init__.py  casadiInterface.py  config.py  tool.py
ODEpower/components/: components_control.py  components_electric.py  connection.py
ODEpower/docs/: example_create_grid.md  example_simulate_grid.md  example_simulink.md  getting_started.md  index.md
ODEpower/docs/api/: ODEgraph.md  ODEmatlab.md  ODEplot.md  ODEpower.md  ODEsimulation.md  ODEtool.md  connection_equations.md
ODEpower/matlab/: ODEsim.slx  eval_input_states.m  ode_readModel.m  simODE.m  simSS.m  simSimulink.m  update_block_parameters.m
ODEpower/src/ODEpower/: ODEgraph.py  ODEmatlab.py  ODEplot.py  ODEpower.py  ODEsimulation.py  components_connection.py  components_control.py  components_electric.py  config.py  prettyPlot.py
ODEpower/tests/: PI.py  base.py  c_KCL.py  c_VsourceR_piLine.py  dabGAM.py  delayLpPIDroop.py  delayPI.py  jupyter.py  loadRL.py  loadVarRL.py  piLine.py  test_PI.py  test_c_KCL.py  test_c_VsourceR_piLine.py  test_c_piLine_loadR.py  test_c_piLine_loadVarR.py  test_c_piLine_loadVarRL.py  test_dabGAM.py  test_delayLpPIDroop.py  test_delayPI.py  test_loadRL.py  test_loadVarRL.py  test_piLine.py
ODEpower/tests/model/: Boost_Switching.slx  Buck_Switching.slx  PI.slx  c_KCL.slx  c_VsourceR_piLine.slx  (+9 more)
ODEpower/tool/: ngSim.py  prettyPlot.py
(+9 files in other folders)
