[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ODEpower"
version = "0.9.1"
description = "ODE-based power system modeling and simulation package"
readme = "README.md"
requires-python = ">=3.7"
license = "GPL-3.0-only"
authors = [
    { name = "Robert Annuth", email = "robert.annuth@tuhh.de" }
]
dependencies = [
    "scipy",
    "sympy",
    "pandas",
    "numpy",
    "control",
    "tabulate",
    "networkx",
    "matlabengine==24.2.2"
]

[project.urls]
Homepage = "https://github.com/rAnnuth/ODEpower"

[tool.setuptools.packages.find]
where = ["src"]

